<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="104dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/lifeStoryLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/lifeStoryLines"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/showLifeStoryLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lifeStoryLines"
                android:paddingLeft="24dp"
                android:paddingBottom="8dp"
                android:text="@string/showLifeStoryLines"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/lifeStoryLinesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="12dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/familyTreeLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/familyTreeLines"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/showFamilyTreeLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/familyTreeLines"
                android:paddingLeft="24dp"
                android:paddingBottom="8dp"
                android:text="@string/showFamilyTreeLines"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/familyTreeLinesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="12dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/spouseLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/spouseLines"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/showSpouseLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spouseLines"
                android:paddingLeft="24dp"
                android:paddingBottom="8dp"
                android:text="@string/showSpouseLines"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/spouseLinesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="12dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/fatherSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/fatherSide"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/showFatherSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fatherSide"
                android:paddingLeft="24dp"
                android:paddingBottom="8dp"
                android:text="@string/showFatherSide"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/fatherSideSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="12dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/motherSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/motherSide"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/showMotherSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/motherSide"
                android:paddingLeft="24dp"
                android:paddingBottom="8dp"
                android:text="@string/showMotherSide"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/motherSideSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="12dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/maleEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/maleEvents"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/showMaleEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maleEvents"
                android:paddingLeft="24dp"
                android:paddingBottom="8dp"
                android:text="@string/showMaleEvents"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/maleEventsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="12dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/femaleEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/femaleEvents"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/showFemaleEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/femaleEvents"
                android:paddingLeft="24dp"
                android:paddingBottom="8dp"
                android:text="@string/showMaleEvents"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/femaleEventsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="12dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:text="@string/logout"
                app:backgroundTint="#00B8D4" />
        </RelativeLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>